Projcet info dialog overflow fix

--- a/src/components/ProjectInfo/projectinfo.css
+++ b/src/components/ProjectInfo/projectinfo.css
@@ -6,6 +6,7 @@
 .styles_modal__gNwvD{
     border-radius: 5px;
     background: #f6f7f9;
+    overflow: hidden;
 }
 .gallery{
     max-width: 85vw;
